Fix some uninitialized variables in convert_legacy_video_factory

This is causing compilation failure on Chrome on Windows using MSVC
64bits.

TBR=andersc@webrtc.org

Bug: chromium:787192
Change-Id: If82290a9d7373385de4820b34f2c7dc9225c3d95
Reviewed-on: https://webrtc-review.googlesource.com/24981
Reviewed-by: Magnus Jedvert <magjed@webrtc.org>
Commit-Queue: Magnus Jedvert <magjed@webrtc.org>
Cr-Commit-Position: refs/heads/master@{#20821}